--- a/features/app/src/main/res/values/strings.xml
+++ b/features/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HotMartApp</string>
     <string name="home_toolbar_title">Home</string>
+    <string name="location_thumbnail_description">Thumbnail Image</string>
 </resources>
