--- a/features/app/src/main/res/values/strings.xml
+++ b/features/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">HotMartApp</string>
     <string name="home_toolbar_title">Home</string>
-    <string name="location_thumbnail_description">Thumbnail Image</string>
+    <string name="location_thumbnail_description">Imagem do estabelecimento</string>
+    <string name="error_message">Ops, tente novamente</string>
+    <string name="refresh_button_description">Botão para tentar novamente</string>
 </resources>
