Implemented a more detailed layout

--- a/features/app/src/main/res/values/strings.xml
+++ b/features/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="location_thumbnail_description">Imagem do estabelecimento</string>
     <string name="error_message">Ops, tente novamente</string>
     <string name="refresh_button_description">Botão para tentar novamente</string>
+    <string name="toolbarImage_description">Imagem do estabelecimento</string>
+    <string name="back_button_description">Botão para voltar</string>
+    <string name="share_button_description">Botão para compartilhar</string>
+    <string name="pictures_text">Fotos</string>
+    <string name="about_text">Sobre</string>
+    <string name="reviews_text">Reviews</string>
 </resources>
