--- a/features/app/src/main/res/values/strings.xml
+++ b/features/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="pictures_text">Fotos</string>
     <string name="about_text">Sobre</string>
     <string name="reviews_text">Reviews</string>
+    <string name="more_reviews">ver todos os %1$d reviews</string>
 </resources>
