--- a/features/app/src/main/res/values/strings.xml
+++ b/features/app/src/main/res/values/strings.xml
@@ -12,4 +12,14 @@
     <string name="about_text">Sobre</string>
     <string name="reviews_text">Reviews</string>
     <string name="more_reviews">ver todos os %1$d reviews</string>
+    <string name="monday">seg</string>
+    <string name="tuesday">ter</string>
+    <string name="wednesday">qua</string>
+    <string name="thursday">qui</string>
+    <string name="friday">sex</string>
+    <string name="saturday">sáb</string>
+    <string name="sunday">dom</string>
+    <string name="and">e</string>
+    <string name="to_day">a</string>
+    <string name="to_hour">às</string>
 </resources>
